--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,1 +1,31 @@
-<p>movie-list works!</p>
+<form #movieForm="ngForm" (ngSubmit)=getData(movieForm)>
+    <select name="" id="">
+
+    </select>
+    <select name="genre" id="genre">
+        <option value="">Select Genre</option>
+        <option value="action">Action</option>
+        <option value="adventure">Adventure</option>
+        <option value="animation">Animation</option>
+        <option value="comedy">Comedy</option>
+        <option value="crime">Crime</option>
+        <option value="documentary">Documentary</option>
+        <option value="drama">Drama</option>
+        <option value="family">Family</option>
+        <option value="fantasy">Fantasy</option>
+        <option value="history">History</option>
+        <option value="horror">Horror</option>
+        <option value="music">Music</option>
+        <option value="mystery">Mystery</option>
+        <option value="romance">Romance</option>
+        <option value="scifi">Science Fiction</option>
+        <option value="tvmovie">TV Movie</option>
+        <option value="thriller">Thriller</option>
+        <option value="war">War</option>
+        <option value="western">Western</option>
+    </select>
+    <select name="" id=""></select>
+
+
+
+</form>
