--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,47 +1,47 @@
 <form #movieForm="ngForm" (ngSubmit)=getData(movieForm)>
-    <select name="rating" id="rating" ngModel>
-        <option value="">Select Rating</option>
-        <option value="0">0</option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-        <option value="6">6</option>
-        <option value="7">7</option>
-        <option value="8">8</option>
-        <option value="9">9</option>
+  <select name="rating" id="rating" ngModel>
+    <option value="">Select Rating</option>
+    <option value="0">0</option>
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+    <option value="6">6</option>
+    <option value="7">7</option>
+    <option value="8">8</option>
+    <option value="9">9</option>
 
-    </select>
-    <select name="genre" id="genre" ngModel>
-        <option value="">Select Genre</option>
-        <option value="action">Action</option>
-        <option value="adventure">Adventure</option>
-        <option value="animation">Animation</option>
-        <option value="comedy">Comedy</option>
-        <option value="crime">Crime</option>
-        <option value="documentary">Documentary</option>
-        <option value="drama">Drama</option>
-        <option value="family">Family</option>
-        <option value="fantasy">Fantasy</option>
-        <option value="history">History</option>
-        <option value="horror">Horror</option>
-        <option value="music">Music</option>
-        <option value="mystery">Mystery</option>
-        <option value="romance">Romance</option>
-        <option value="scifi">Science Fiction</option>
-        <option value="tvmovie">TV Movie</option>
-        <option value="thriller">Thriller</option>
-        <option value="war">War</option>
-        <option value="western">Western</option>
-    </select>
-    <select name="runtime" id="runtime" ngModel>
-        <option value="">Select Runtime</option>
-        <option value="lt1">Under 1hr</option>
-        <option value="lt2">Under 2hr</option>
-        <option value="lt3">Under 3hr</option>
-        <option value="lt4">Under 4hr</option>
+  </select>
+  <select name="genre" id="genre" ngModel>
+    <option value="">Select Genre</option>
+    <option value="28">Action</option>
+    <option value="12">Adventure</option>
+    <option value="16">Animation</option>
+    <option value="35">Comedy</option>
+    <option value="80">Crime</option>
+    <option value="99">Documentary</option>
+    <option value="18">Drama</option>
+    <option value="10751">Family</option>
+    <option value="14">Fantasy</option>
+    <option value="36">History</option>
+    <option value="27">Horror</option>
+    <option value="10402">Music</option>
+    <option value="9648">Mystery</option>
+    <option value="10749">Romance</option>
+    <option value="878">Science Fiction</option>
+    <option value="10770">TV Movie</option>
+    <option value="53">Thriller</option>
+    <option value="10752">War</option>
+    <option value="37">Western</option>
+  </select>
+  <select name="runtime" id="runtime" ngModel>
+    <option value="">Select Runtime</option>
+    <option value="59">Under 1hr</option>
+    <option value="119">Under 2hr</option>
+    <option value="179">Under 3hr</option>
+    <option value="239">Under 4hr</option>
 
-    </select>
-    <button>Submit</button>
+  </select>
+  <button>Submit</button>
 </form>
