--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -37,10 +37,10 @@
   </select>
   <select name="runtime" id="runtime" ngModel>
     <option value="">Select Runtime</option>
-    <option value="59">Under 1hr</option>
-    <option value="119">Under 2hr</option>
-    <option value="179">Under 3hr</option>
-    <option value="239">Under 4hr</option>
+    <option value="59">Over 1hr</option>
+    <option value="119">Over 2hr</option>
+    <option value="179">Over 3hr</option>
+    <option value="239">Over 4hr</option>
 
   </select>
   <button>Submit</button>
