--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,28 +1,1 @@
-<form #movieForm="ngForm" (ngSubmit)=getData(movieForm)>
-    <select name="rating" id="rating" ngModel>
-        <option value="">Select Minimum Rating</option>
-        <option value="0">0</option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-        <option value="6">6</option>
-        <option value="7">7</option>
-        <option value="8">8</option>
-        <option value="9">9</option>
-
-    </select>
-    <select name="genre" id="genre" ngModel>
-        <option value="">Select Genre</option>
-        <option *ngFor="let genre of genreResponse?.genres" [value]="genre.id">{{genre.name}}</option>
-
-    </select>
-    <select name="certification" id="certification" ngModel>
-        <option value="">Select Rating</option>
-        <option *ngFor="let cert of certResponse?.certifications.US" [value]="cert.certification">
-            {{cert.certification}}</option>
-
-    </select>
-    <button>Submit</button>
-</form>
+<app-search-criteria></app-search-criteria>
