--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<router-outlet></router-outlet>
+<div class="wrapper">
+  <div>
+    <div class="head_buttonDiv">
+      <h1 class="title">PirateBae</h1>
+      <div>
+        <button>Watchlist</button>
+      </div>
+    </div>
+  </div>
+  <app-search-criteria></app-search-criteria>
+  <router-outlet class="router"></router-outlet>
+</div>
