--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,1 +1,3 @@
-<app-search-criteria></app-search-criteria>
+<div class="movieListWrapper">
+  <p>Movie Title: {{data?.results[0].title}}</p>
+</div>
