--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+header, body, main, h1, * {
+  margin: 0;
+  padding: 0
+}
