--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,3 +1,12 @@
+<app-search-criteria></app-search-criteria>
+
 <div class="movieListWrapper">
-  <p>Movie Title: {{data?.results[0].title}}</p>
+
+  <div class="movie-card" *ngFor="let result of data?.results, index as i">
+
+    <img *ngIf="data" src=" https://image.tmdb.org/t/p{{data?.results[i].poster_path}}" />
+    <!-- <img *ngIf="data" src="https://api.themoviedb.org/3/discover/movie{{data?.results[i].poster_path}}" /> -->
+    <p>Movie Title: {{data?.results[i].title}}</p>
+  </div>
+
 </div>
