--- a/src/app/movie-list/movie-list.component.css
+++ b/src/app/movie-list/movie-list.component.css
@@ -1,3 +1,20 @@
 .movieListWrapper{
-  min-height: 100vh
+  min-height: 100vh;
+  display: flex; 
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.movie-card {
+  background-color: rgba(5, 5, 5, 0.164);
+  margin: 10px;
+  padding: 5px;
+  border-radius:5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.movie-img {
+  max-width: 150px;
+  max-height: 200px;
 }
