--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -25,6 +25,6 @@
         {{cert.certification}}</option>
 
     </select>
-    <button class="button select">Submit</button>
+    <button class="form-button select">Submit</button>
   </form>
 </div>
