--- a/src/app/search-criteria/search-criteria.component.css
+++ b/src/app/search-criteria/search-criteria.component.css
@@ -5,8 +5,28 @@
   margin-bottom: 30px;
 }
 .select{
+  font-family: 'Oswald', sans-serif;
   border-radius: 5px;
-  border: 3px solid rgb(66, 66, 66);
-  background-color: hotpink;
-  color: rgb(66, 66, 66)
+
+  /* border: 3px solid rgb(66, 66, 66);
+  background-color: hotpink; */
+  /* color: rgb(66, 66, 66); */
+  /* alyssa new css */
+  border: 1px solid rgba(244, 238, 238, 0.858);
+  background-image: linear-gradient(217deg, rgb(68, 118, 129, .8), rgb(68, 118, 129, 0) 70.71%),
+  linear-gradient(127deg, rgba(64, 81, 115,.8), rgb(64, 81, 115,0) 70.71%),
+  linear-gradient(336deg, rgb(68, 81, 123, .8), rgb(68, 81, 123));
+  color: white;
+  margin-left: 5px;
+  
+}
+
+@media screen and (min-width: 768px) {
+  .select{
+    height:30px;
+    font-size: 15px;
+  }
+  .form-button {
+    padding: 2px 10px;
+  }
 }
