--- a/src/app/search-criteria/search-criteria.component.css
+++ b/src/app/search-criteria/search-criteria.component.css
@@ -1,24 +1,35 @@
 .searchContainer{
   display: flex;
   justify-content: space-evenly;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  flex-direction: row;
+  margin-bottom: 20px;
+}
+.formDiv{
+  display: flex;
+  flex-direction: column;
 }
 .select{
   font-family: 'Oswald', sans-serif;
   border-radius: 5px;
-
-  /* border: 3px solid rgb(66, 66, 66);
-  background-color: hotpink; */
-  /* color: rgb(66, 66, 66); */
-  /* alyssa new css */
   border: 1px solid rgba(244, 238, 238, 0.858);
   background-image: linear-gradient(217deg, rgb(68, 118, 129, .8), rgb(68, 118, 129, 0) 70.71%),
   linear-gradient(127deg, rgba(64, 81, 115,.8), rgb(64, 81, 115,0) 70.71%),
   linear-gradient(336deg, rgb(68, 81, 123, .8), rgb(68, 81, 123));
   color: white;
-  margin-left: 5px;
-  
+  margin: 5px;
+  width: 115px
+}
+.submitButton{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.form-button{
+  margin: 5px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -28,5 +39,12 @@
   }
   .form-button {
     padding: 2px 10px;
+  }
+  .searchContainer{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
 }
