--- a/src/app/watchlist-page/watchlist-page.component.html
+++ b/src/app/watchlist-page/watchlist-page.component.html
@@ -1,1 +1,10 @@
-<p>watchlist-page works!</p>
+<div>
+  <div class="head_buttonDiv">
+    <h1 class="title">PirateBae<span id='secondText'>«</span></h1>
+    <div>
+      <!-- <button class="watchlistbtn"><i id="wlheart" class="fas fa-heart"></i></button> -->
+      <button class="watchlistbtn" title="view watchlist" routerLink="/watchlist">t</button>
+
+    </div>
+  </div>
+</div>
