--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -4,7 +4,7 @@
       <h1 class="title">PirateBae<span id='secondText'>«</span></h1>
       <div>
         <!-- <button class="watchlistbtn"><i id="wlheart" class="fas fa-heart"></i></button> -->
-        <button class="watchlistbtn" title="view watchlist">t</button>
+        <button class="watchlistbtn" title="view watchlist" routerLink="/watchlist">t</button>
 
       </div>
     </div>
@@ -21,7 +21,7 @@
       <p class="movie-details">{{data?.results[i].title}}</p>
       <p class="movie-details">{{data?.results[i].release_date}}</p>
       <p class="movie-details"><i class="fas fa-star"></i> {{data?.results[i].vote_average}}</p>
-      <i id="addwlheart" class="fas fa-heart"></i>
+      <i id="addwlheart" class="fas fa-heart" (click)=addToWatchlist(result)></i>
 
     </div>
 
