--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -14,7 +14,7 @@
   <div class="movieListWrapper">
 
     <div class="movie-card" *ngFor="let result of data?.results, index as i"
-      ng-repeat="result in data?.results | orderBy: '-data?.results[i].vote_average'">
+      ng-repeat="result in data?.results | orderBy: '-data?.results[i].vote_average'" (click)="showMovieDesc()">
 
       <img class="movie-img" *ngIf="data"
         src="https://image.tmdb.org/t/p/w220_and_h330_face{{data?.results[i].poster_path}}" />
@@ -24,6 +24,11 @@
       <i id="addwlheart" class="fas fa-heart" (click)=addToWatchlist(result)></i>
 
     </div>
-
+    <div class="mamadiv" *ngIf="show">
+      <div *ngFor="let result of data?.results, index as i" class="moviedesc">
+        <p class="movie-details">{{data?.results[i].title}}</p>
+        <p class="movie-details">{{data?.results[i].overview}}</p>
+      </div>
+    </div>
   </div>
 </div>
