--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -14,11 +14,11 @@
   <div class="movieListWrapper">
 
     <div class="movie-card" *ngFor="let result of data?.results, let desc of descriptions, index as i"
-      ng-repeat="result in data?.results | orderBy: '-data?.results[i].vote_average'" (click)="showMovieDesc()"
-      (click)=addToDescs(desc)>
+      ng-repeat="result in data?.results | orderBy: '-data?.results[i].vote_average'">
 
       <img class="movie-img" *ngIf="data"
-        src="https://image.tmdb.org/t/p/w220_and_h330_face{{data?.results[i].poster_path}}" />
+        src="https://image.tmdb.org/t/p/w220_and_h330_face{{data?.results[i].poster_path}}" (click)="showMovieDesc()"
+        (click)=addToDescs(desc) />
       <p class="movie-details">{{data?.results[i].title}}</p>
       <p class="movie-details">{{data?.results[i].release_date}}</p>
       <p class="movie-details"><i class="fas fa-star"></i> {{data?.results[i].vote_average}}</p>
